--- a/src/main/resources/templates/mypage/mypageHome.mustache
+++ b/src/main/resources/templates/mypage/mypageHome.mustache
@@ -11,7 +11,7 @@
             <h1>안녕하세요! <span>{{name}}</span>님!</h1>
             <P>아이디 : <span>{{memberId}}</span></P>
             <p>닉네임 : <span>{{nickname}}</span></p>
-            <button onclick="openProfileEditModal()">프로필 수정</button><!--클릭시 프로필 수정 페이지가 팝업으로 나타남-->
+            <button onclick="openProfileEditPopup()">프로필 수정</button><!--클릭시 프로필 수정 페이지가 팝업으로 나타남-->
         </div>
     </div>
     <!--<div class="card-bottom">추후 멤버십등급, 포인트 등..이곳에 나타낼 예정</div>-->
@@ -94,3 +94,4 @@
         </tbody>
     </table>
 </div>
+<script src="/js/mypage/mypageHome.js"></script>
