--- a/src/main/resources/templates/mypage/mypageHome.mustache
+++ b/src/main/resources/templates/mypage/mypageHome.mustache
@@ -2,10 +2,10 @@
 <div class="mypage-home-card">
     <div class="card-top">
         {{#profileImg}}
-            <img src="/upload/profile/{{profileImg}}" alt="프로필 이미지">
+            <img src="/images/profile/{{profileImg}}" alt="프로필 이미지">
         {{/profileImg}}
         {{^profileImg}}
-            <img src="/images/icons/default-profile.png" alt="기본 이미지">
+            <img src="/images/profile/default-profile.png" alt="기본 이미지">
         {{/profileImg}}
         <div class="profile-info">
             <h1>안녕하세요! <span>{{name}}</span>님!</h1>
