--- a/src/main/resources/static/css/mypage/pref.css
+++ b/src/main/resources/static/css/mypage/pref.css
@@ -107,7 +107,7 @@ form{
   padding: 8px 14px;
   border: 1px solid #ccc;
   border-radius: 20px;
-  background-color: #f5f5f5;
+  background-color: white;
   cursor: pointer;
   font-size: 14px;
   transition: all 0.2s ease;
