--- a/src/main/resources/templates/mypage/profileEditPopup.mustache
+++ b/src/main/resources/templates/mypage/profileEditPopup.mustache
@@ -13,13 +13,14 @@
 </head>
 <body>
 <div class="container">
-    <h2 class="title">프로필 수정</h2>
+    <div class="header">
+        <h2 class="title">프로필 수정</h2>
+    </div>
 
     <form method="post" action="/mypage/information/profileEdit" enctype="multipart/form-data" class="edit-form">
         <!-- 프로필 이미지 영역 -->
         <div class="form-row profile-section">
             <div class="profile-label">프로필 사진</div>
-
             <div class="profile-content">
                 {{#profileImg}}
                     <img src="/images/profile/{{profileImg}}" alt="프로필 이미지" class="profile-preview">
