--- a/src/main/resources/templates/mypage/mypageHome.mustache
+++ b/src/main/resources/templates/mypage/mypageHome.mustache
@@ -54,7 +54,7 @@
         {{#recentReservations}}
         <tr>
             <td>{{movieTitle}}</td>
-            <td>{{reservationTime}}</td>
+            <td>{{formattedReservationTime}}</td>
             <td>{{cinemaName}}</td>
         </tr>
         {{/recentReservations}}
