--- a/src/main/resources/templates/mypage/mypageLayout.mustache
+++ b/src/main/resources/templates/mypage/mypageLayout.mustache
@@ -37,6 +37,9 @@
             {{#bookinglist}}
                 {{> mypage/bookinglist }}
             {{/bookinglist}}
+            {{#bookingdetail}}
+                {{> mypage/bookingdetail }}
+            {{/bookingdetail}}
             {{#mymovie}}
                 {{> mypage/mymovie }}
             {{/mymovie}}
