--- a/src/main/resources/static/css/mypage/bookinglist.css
+++ b/src/main/resources/static/css/mypage/bookinglist.css
@@ -25,45 +25,46 @@
   font-size: 14px;
   margin-bottom: 10px;
 }
-.booking-header-left{
+
+.booking-header-left {
   display: flex;
   gap: 10px;
   color: #777;
   align-items: center;
 }
-.reservation-date{
+
+.reservation-date {
   color: #222;
 }
+
 .booking-body {
   display: flex;
-  gap: 5px;
-  flex-direction: column;
+  gap: 16px;
 }
 
-.poster img {
+.poster {
   width: 80px;
   height: 120px;
+  border-radius: 8px;
+  border: 0.5px solid #eee;
   object-fit: cover;
-  border-radius: 5px;
-  border: 0.5px solid #ddd;
 }
 
 .booking-info {
   display: flex;
   flex-direction: column;
   gap: 6px;
+  align-items: flex-start;
 }
 
 /* 예매 상태 텍스트 색상 */
 .status {
   font-weight: bold;
   font-size: 18px;
+  margin-bottom: 15px;
 }
 
-.booking-area{
-  display: flex; 
-  gap : 16px;
-  align-items: center;
+.booking-area {
 }
 
 .status-confirmed {
@@ -86,9 +87,20 @@
   color: #222;
 }
 
-.showtime, .seat-type{
+.showtime {
   color: #777;
   font-size: 14px;
+}
+
+.seat-type {
+  margin-top: 5px;
+  display: inline-block;
+  background-color: #e1f3f6;
+  color: #007880;
+  padding: 4px 10px;
+  border-radius: 20px;
+  font-size: 13px;
+  line-height: 1;
 }
 
 .booking-footer {
@@ -100,7 +112,8 @@
   font-size: 14px;
   cursor: pointer;
 }
-.detail-link svg{
+
+.detail-link svg {
   width: 15px;
   height: 15px;
 }
