--- a/src/main/resources/templates/mypage/bookinglist.mustache
+++ b/src/main/resources/templates/mypage/bookinglist.mustache
@@ -22,11 +22,9 @@
             </div>
 
             <div class="booking-body">
-                <p class="status {{paymentStatusClass}}">{{paymentStatusText}}</p>
+                <img src="/images/posters/{{mainImageUrl}}" alt="{{movieTitle}}" class="poster" />
                 <div class="booking-area">
-                    <div class="poster">
-                        <img src="/images/posters/{{mainImageUrl}}" alt="{{movieTitle}}" />
-                    </div>
+                    <p class="status {{paymentStatusClass}}">{{paymentStatusText}}</p>
                     <div class="booking-info">
                         <p class="movie-title">{{movieTitle}}</p>
                         <p class="showtime">{{formattedShowtimeStart}}</p>
