--- a/src/main/resources/templates/mypage/myreview.mustache
+++ b/src/main/resources/templates/mypage/myreview.mustache
@@ -1,13 +1,11 @@
 <link rel="stylesheet" href="/css/mypage/mymovieAndmyreview.css?v={{ timestamp }}" />
 <div class="mymovie-container">
-
     <h2 class="container-title">나의 영화</h2>
     <div class="tab-menu">
         <a href="/mypage/mymovie" class="{{#mymovie}}active{{/mymovie}}">내가 본 영화</a>
         <a href="/mypage/myreview" class="{{#myreview}}active{{/myreview}}">내가 쓴 관람평</a>
         <a href="/mypage/mylike" class="{{#mylike}}active{{/mylike}}">좋아요 한 영화</a>
     </div>
-
 
     {{#watchedMovies}}
     <div class="movie-card">
@@ -21,18 +19,12 @@
             <div class="tags">
                 <span class="tag">{{seatType}} {{personCount}}</span>
             </div>
-            {{#hasReview}}
             <p class="review-content">{{reviewContent}}</p>
-            {{/hasReview}}
-
-            {{^hasReview}}
-            <a class="no-review" href="/review/write?movieId={{movieId}}">실관람평을 남겨주세요.</a>
-            {{/hasReview}}
         </div>
     </div>
     {{/watchedMovies}}
 
     {{^watchedMovies}}
-    <p class="no-data">관람한 영화가 없습니다.</p>
+    <p class="no-data">작성한 관람평이 없습니다.</p>
     {{/watchedMovies}}
 </div>
