개인정보 설정 로직 완료

--- a/src/main/resources/templates/mypage/mypageLayout.mustache
+++ b/src/main/resources/templates/mypage/mypageLayout.mustache
@@ -52,6 +52,14 @@
             {{#myinfo}}
                 {{> mypage/myinfo }}
             {{/myinfo}}
+            {{#myinfoPasswordCheck}}
+                {{> mypage/myinfoPasswordCheck}}
+            {{/myinfoPasswordCheck}}
+
+            {{#myinfoEdit}}
+                {{> mypage/myinfoEdit}}
+            {{/myinfoEdit}}
+
             {{#pref}}
                 {{> mypage/pref }}
             {{/pref}}
